server/compilers/goLiteJS/src/test/ml2/valid/type1.go
// basic type support
package main

var n int = 23
var x float64 = 23.0
var p bool = true
var a rune = 'a'
var s string = "asdf"
