server/compilers/goLiteJS/src/test/ml2/invalid/decl7.go
// assignment does not type check in declaration
package main

var a int = 23.0
